# ShapeWorks

./: CMakeLists.txt  README.md  ellipsoidMain.html  index.html
Run/source/ParticleSystem/: CMakeLists.txt  MaximumEntropyCorrespondenceSampler.h  MaximumEntropyCorrespondenceSampler.txx  MaximumEntropySurfaceSampler.h  MaximumEntropySurfaceSampler.txx  ParticleAttribute.h  ParticleClipRegionDomain.h  ParticleConstrainedModifiedCotangentEntropyGradientFunction.h  ParticleConstrainedModifiedCotangentEntropyGradientFunction.txx  ParticleContainer.h  ParticleContainerArrayAttribute.h  ParticleCurvatureEntropyGradientFunction.h  ParticleCurvatureEntropyGradientFunction.txx  ParticleCurvatureEntropyPlanarConstraint.h  ParticleDomain.h  ParticleDomain.txx  ParticleDualVectorFunction.h  ParticleEnsembleEntropyFunction.h  ParticleEnsembleEntropyFunction.txx  ParticleEntropyGradientFunction.h  ParticleEntropyGradientFunction.txx  ParticleEvents.h  ParticleGaussianModeWriter.h  ParticleGaussianModeWriter.txx  ParticleGeneralShapeGradientMatrix.h  ParticleGeneralShapeMatrix.h  ParticleGoodBadAssessment.h  ParticleGoodBadAssessment.txx  ParticleGradientDescentPositionOptimizer.h  ParticleGradientDescentPositionOptimizer.txx  ParticleImageDomain.h  ParticleImageDomainWithCurvature.h  ParticleImageDomainWithGradients.h  ParticleImageDomainWithHessians.h  ParticleImplicitSurfaceDomain.h  ParticleImplicitSurfaceDomain.txx  ParticleMeanCurvatureAttribute.h  ParticleMeanCurvatureAttribute.txx  ParticleMeshBasedGeneralEntropyGradientFunction.h  (+28 more)
_build/: .buildinfo  dependencies.html  (+8 more)
(+223 files in other folders)
